--- a/PRJ/gomsu-client/src/app/pages/cart/cart.component.html
+++ b/PRJ/gomsu-client/src/app/pages/cart/cart.component.html
@@ -4,65 +4,108 @@
     [location]="'Giỏ hàng'"
   ></app-breadcrumb>
   <div class="cart-detail container">
-    <div class="col-sm-7">
-      <table class="order-table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Thông tin sản phẩm</th>
-            <th scope="col">Đơn giá</th>
-            <th scope="col">Số lượng</th>
-            <th scope="col">Thành tiền</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let item of productCart">
-            <th scope="row">1</th>
-            <td class="information">
-              <div class="product">
-                <img src="{{ item.product.imageUrl }}" alt="" />
-                <div class="product-name-wrapper">
-                  <span class="product-name">{{ item.product.name }}</span>
-                  <a
-                    href="#"
-                    (click)="handleRemoveProductFromCart(item.product.id)"
-                    class="remove"
-                    >Xóa</a
-                  >
+    <div class="row">
+      <div class="col-sm-9">
+        <table class="order-table w-100">
+          <thead>
+            <tr>
+              <th scope="col">Thông tin sản phẩm</th>
+              <th scope="col" class="col-price">Đơn giá</th>
+              <th scope="col" class="col-quantity">Số lượng</th>
+              <th scope="col" class="col-totalprice">Thành tiền</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of productCart">
+              <td class="information">
+                <div class="product">
+                  <img src="{{ item.product.imageUrl }}" alt="" />
+                  <div class="product-name-wrapper">
+                    <span class="product-name">{{ item.product.name }}</span>
+                    <a
+                      (click)="handleRemoveProductFromCart(item.product.id)"
+                      class="remove"
+                      >Xóa</a
+                    >
+                  </div>
                 </div>
-              </div>
-            </td>
-            <td>{{ item.product.price | number: "1.0-0" }}đ</td>
-            <td>
-              <div class="quantity-control">
-                <button
-                  class="btn-quantity"
-                  (click)="handleDecreaseQuantity(item.product.id)"
-                >
-                  -
-                </button>
-                <input
-                  type="text"
-                  class="input-quantity"
-                  disabled
-                  min="1"
-                  [(ngModel)]="item.quantity"
-                />
-                <button
-                  class="btn-quantity"
-                  (click)="handleIncreaseQuantity(item.product.id)"
-                >
-                  +
-                </button>
-              </div>
-            </td>
-            <td class="total-price-product">
-              {{ item.product.price * item.quantity | number: "1.0-0" }}đ
-            </td>
-          </tr>
-        </tbody>
-      </table>
+              </td>
+              <td class="price">{{ item.product.price | number: "1.0-0" }}đ</td>
+              <td>
+                <div class="quantity-control">
+                  <button
+                    class="btn-quantity"
+                    (click)="handleDecreaseQuantity(item.product.id)"
+                  >
+                    -
+                  </button>
+                  <input
+                    type="text"
+                    class="input-quantity"
+                    disabled
+                    min="1"
+                    [(ngModel)]="item.quantity"
+                  />
+                  <button
+                    class="btn-quantity"
+                    (click)="handleIncreaseQuantity(item.product.id)"
+                  >
+                    +
+                  </button>
+                </div>
+              </td>
+              <td class="total-price-product">
+                {{ item.product.price * item.quantity | number: "1.0-0" }}đ
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="col-sm-3 date">
+        <h1 class="heading">Thời gian giao hàng</h1>
+        <div class="picker">
+          <input
+            type="date"
+            placeholder="Chọn ngày"
+            class="date-picker"
+            [(ngModel)]="datePicker"
+            [min]="minDate"
+          />
+          <select class="time-picker" [(ngModel)]="timePicker">
+            <option value="">
+              Chọn thời gian
+              <fa-icon [icon]="faChevronDown" class="icon"></fa-icon>
+            </option>
+            <option value="08h00-12h00">
+              08h00-12h00
+              <fa-icon [icon]="faChevronDown" class="icon"></fa-icon>
+            </option>
+            <option value="14h00-18h00">
+              14h00-18h00
+              <fa-icon [icon]="faChevronDown" class="icon"></fa-icon>
+            </option>
+            <option value="19h00-21h00">
+              19h00-21h00
+              <fa-icon [icon]="faChevronDown" class="icon"></fa-icon>
+            </option>
+          </select>
+        </div>
+        <label for="hoadon" class="xuathoadon">
+          <input id="hoadon" type="checkbox" />
+          Xuất hóa đơn công ty
+        </label>
+      </div>
     </div>
-    <div class="col-sm-5" class="date"></div>
+    <div class="row">
+      <div class="col-sm-9">
+        <br />
+        <div class="total-price">
+          <span class="text">Tổng tiền: </span>
+          <span class="value">{{ totalPrice | number: "1.0-0" }}đ</span>
+        </div>
+        <br />
+        <br /><button class="btn-payment">Thanh toán</button><br />
+      </div>
+    </div>
   </div>
 </section>
