change update fe

--- a/PRJ/gomsu-client/src/app/pages/forgot-password/forgot-password.component.css
+++ b/PRJ/gomsu-client/src/app/pages/forgot-password/forgot-password.component.css
@@ -2,6 +2,7 @@
   max-width: 350px;
   margin: 30px auto;
 }
+
 .input {
   width: 100%;
   height: 40px;
@@ -14,6 +15,7 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   font-size: 15px;
 }
+
 .button {
   outline: 0;
   border: 0;
@@ -29,6 +31,7 @@
   color: #ca6e04;
   transition: 0.4s ease all;
 }
+
 .input:focus {
   box-shadow: 0 0px 10px 0px #f2b250 !important;
   transition: 0.35s ease;
@@ -85,11 +88,12 @@
 
 .btn-submit:active {
   transform: scale(0.95);
-  transition: 0.4 ease all;
+  transition: 0.4s ease all;
 }
+
 .finded-account {
   font-size: 15px;
-  height: 280px;
+  height: 300px;
   animation: heightFindAccount 0.5s ease;
 }
 
@@ -101,12 +105,15 @@
     height: 280px;
   }
 }
+
 .finded-account span {
   color: #ca6e04;
 }
+
 .input-otp {
   width: 70%;
 }
+
 .btn-sendOTP {
   width: 29%;
   margin-left: 1%;
