--- a/PRJ/gomsu-client/src/app/pages/payment/payment.component.html
+++ b/PRJ/gomsu-client/src/app/pages/payment/payment.component.html
@@ -203,7 +203,7 @@
       <div class="total-temporary">
         <div class="price">
           <div class="price-text">Tạm tính</div>
-          <div class="price-value">{{ totalPriceTemporaty| number: "1.0-0" }}đ</div>
+          <div class="price-value">{{ totalPriceTemporary| number: "1.0-0" }}đ</div>
         </div>
         <div class="discount-price" *ngIf="discount > 0">
           <div class="discount-text">Giảm giá</div>
