--- a/PRJ/gomsu-client/src/app/pages/navbar/navbar.component.css
+++ b/PRJ/gomsu-client/src/app/pages/navbar/navbar.component.css
@@ -447,3 +447,9 @@
 .no-product .img-empty {
   width: 80%;
 }
+
+.cart-list {
+  scroll-behavior: smooth;
+  overflow: auto;
+  max-height: 50vh;
+}
