--- a/PRJ/gomsu-client/src/app/app.component.html
+++ b/PRJ/gomsu-client/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
-<router-outlet />
-
+<router-outlet/>
+<div class="loader-container" *ngIf="isLoading">
+  <div class="loader"></div>
+</div>
 <app-footer></app-footer>
