--- a/PRJ/gomsu-client/src/styles.css
+++ b/PRJ/gomsu-client/src/styles.css
@@ -11,6 +11,7 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
+
 ::-webkit-scrollbar {
   width: 5px;
 }
@@ -22,4 +23,49 @@
 ::-webkit-scrollbar-thumb {
   background-color: #be742a;
   border-radius: 10px;
+}
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  z-index: 1;
+  width: 70px;
+  aspect-ratio: 1;
+  background: radial-gradient(farthest-side, #ffa516 90%, #0000) center/16px 16px,
+  radial-gradient(farthest-side, green 90%, #0000) bottom/12px 12px;
+  background-repeat: no-repeat;
+  animation: l17 1s infinite linear;
+  position: relative;
+}
+
+.loader::before {
+  content: "";
+  position: absolute;
+  width: 8px;
+  aspect-ratio: 1;
+  inset: auto 0 16px;
+  margin: auto;
+  background: #ccc;
+  border-radius: 50%;
+  transform-origin: 50% calc(100% + 10px);
+  animation: inherit;
+  animation-duration: 0.5s;
+}
+
+@keyframes l17 {
+  100% {
+    transform: rotate(1turn)
+  }
 }
