--- a/PRJ/gomsu-client/src/app/pages/account/account.component.html
+++ b/PRJ/gomsu-client/src/app/pages/account/account.component.html
@@ -1,14 +1,14 @@
 <section id="account">
-  <app-breadcrumb [heading]="'Trang người dùng'" [location]="'Trang người dùng'"></app-breadcrumb>
-  <div class="account-container container">
-    <div class="row">
-      <div class="col-sm-4">
-        <app-sidebar-account></app-sidebar-account>
-      </div>
-      <div class="col-sm-8">
+    <app-breadcrumb [heading]="'Trang người dùng'" [location]="'Trang người dùng'"></app-breadcrumb>
+    <div class="account-container container">
+        <div class="row">
+            <div class="col-sm-4">
+                <app-sidebar-account></app-sidebar-account>
+            </div>
+            <div class="col-sm-8">
+                <router-outlet></router-outlet>
+            </div>
 
-      </div>
-
+        </div>
     </div>
-  </div>
 </section>
