--- a/PRJ/gomsu-client/src/app/pages/product-all/product-all.component.html
+++ b/PRJ/gomsu-client/src/app/pages/product-all/product-all.component.html
@@ -85,7 +85,7 @@
               | paginate
                 : {
                     itemsPerPage: productPerPage,
-                    currentPage: currentPage - 1,
+                    currentPage: currentPage + 1,
                     totalItems: totalProducts,
                   }
           "
